Cambios menores en el código de mi pagina

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -68,11 +68,11 @@ cite{
 i{
     font-size: 24px ;
 }
-/* 
+/*
 Selecciona cualquier elemento que coincida con :link o :visited 
 El que sea -moz o webkit solo es para compatibilidad de navegadores
 */
-a{ 
+a{
     color: white;
     text-decoration: none;
     transition: var(--animateGblobal);
@@ -161,7 +161,7 @@ footer ul{
 }
 #title_aboutme:hover a, #title_aboutme:hover ~ #text_aboutme p strong{
     color: var(--pur);
-} 
+}
 #image_aboutme{
     grid-column: 1;
     grid-row: 1/3;
@@ -227,7 +227,7 @@ footer ul{
     color: wheat;
     font-size: 12px;
     font-weight: 400;
-}	
+}
 .proyect .masinfo{
     margin: 15px 0px 15px 0px;
     height: 26px;
@@ -280,7 +280,7 @@ footer ul{
     /* Aqui tenemos un tema con el grid-template-columns por que si yo pongo 350px en los ancho de la columna esto se define
         y pierde sentido cuando el ancho de la pantalla no es la suma de las tarjetas "cardexp" entonces lo dejo como 1fr (de manera automatica)
         y ya despues veo que podria pasar */
-    grid-template-columns: repeat(3, 1fr); 
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
     justify-content: space-between;
     align-content: space-around;
@@ -364,6 +364,7 @@ input:hover[type="submit"]{
     color: var(--pur);
 }
 #logChanges{
+    border-top: var(--pur) 5px solid;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -408,7 +409,7 @@ input:hover[type="submit"]{
         grid-row: 1;
         justify-self: center;
         border-radius: 3em 3em 0em 0em;
-        
+
     }
     #title_aboutme{
         grid-column: 1;
@@ -441,14 +442,14 @@ input:hover[type="submit"]{
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
     }
-    
+
     #proyect_buttons button{
         justify-self: center;
     }
     .proyect_container{
         justify-content: center;
     }
-    
+
     #proyects h2, #proyects h3{
         text-align: center;
     }
