--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Importar la fuente Cascadia Code */
+@font-face {
+  font-family: 'Cascadia Code';
+  src: url('../public/fonts/CascadiaCode.woff2') format('woff2'),
+       url('../public/fonts/CascadiaCodeItalic.woff2') format('woff2'),
+       url('../public/fonts/CascadiaCodeNF.woff2') format('woff2'),
+       url('../public/fonts/CascadiaCodeNFItalic.woff2') format('woff2'),
+       url('../public/fonts/CascadiaCodePL.woff2') format('woff2'),
+       url('../public/fonts/CascadiaCodePLItalic.woff2') format('woff2'),
+       url('../public/fonts/CascadiaMono.woff2') format('woff2'),
+       url('../public/fonts/CascadiaMonoItalic.woff2') format('woff2'),
+       url('../public/fonts/CascadiaMonoNF.woff2') format('woff2'),
+       url('../public/fonts/CascadiaMonoNFItalic.woff2') format('woff2'),
+       url('../public/fonts/CascadiaMonoPL.woff2') format('woff2'),
+       url('../public/fonts/CascadiaMonoPLItalic.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Cascadia Code', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -12,6 +31,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'Cascadia Code', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
